# home_station

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  License  Makefile  Readme.md  Todo.md
.github/workflows/: device.yml  firmware.yml  gateway.yml  service.yml  unit_test.yml
cmake/: bme68x.cmake  stm32-board.cmake  toolchain-native.cmake
config/: nucleo-f446re.repl  nucleo-f446re.resc
device/: .gitignore  CMakeLists.txt  Doxyfile  Makefile  Readme.md  build.sh
device/cmake/: cmocka.cmake  freertos.cmake  openocd.cmake  stm32-board.cmake  toolchain-native.cmake
device/config/: nucleo-f446re.resc  stm32f446retx.ld
device/lib/driver/bme68x/: CMakeLists.txt
device/lib/hal/: CMakeLists.txt
device/lib/rtos/: CMakeLists.txt
device/src/: CMakeLists.txt  main.c  syscalls.c
device/src/commands/: CMakeLists.txt  commands.c  commands.h
device/src/console/: CMakeLists.txt  console.c  console.h
device/src/fsm/: fsm.c  fsm.h
device/src/led/: CMakeLists.txt  led.c  led.h
device/src/protocol/: CMakeLists.txt  protocol.c  protocol.h
device/src/sensor/: CMakeLists.txt  sensor.c  sensor.h
device/src/shell/: CMakeLists.txt  shell.c  shell.h
device/test/: CMakeLists.txt
device/test/acceptance/emulator/: BME680.cs
device/test/mock/: CMakeLists.txt  mock_freertos.c  mock_freertos.h  mock_protocol.c  mock_shell.c  mock_stm32f4x.c
device/test/ut/: CMakeLists.txt  test_commands.c  test_led.c  test_protocol.c  test_shell.c
documentation/: Device_Overview.drawio  Gateway_Overview.drawio  Home_Station_System_View.drawio
firmware/: .gitignore  CMakeLists.txt  Readme.md  build.sh  run.sh
firmware/cmake/: bme68x.cmake  stm32-board.cmake  testing.cmake  toolchain-arm-none-eabi.cmake
firmware/config/: nucleo-f446re.resc
firmware/lib/: CMakeLists.txt
firmware/src/: CMakeLists.txt  commands.c  commands.h  console.h  main.c  sensor.c  sensor.h  shell.c
firmware/src/commands/: commands.c  commands.h
firmware/src/led/: led.c  led.h
firmware/test/: CMakeLists.txt  bme680_regs.xml
firmware/test/acceptance/: TestShell.robot  requirements.txt
firmware/test/acceptance/emulator/: bme680.cs  bme680Test.cs
firmware/test/mock/: mock_commands.c  mock_freertos.h  mock_led.h  mock_protocol.c  mock_protocol.h  mock_sensor.c  mock_shell.h  mock_stm32f4x.c  mock_stm32f4x.h
firmware/test/ut/: test_commands.c  test_protocol.c  test_sensor.c  test_shell.c
gateway/: .gitignore  Makefile  Readme.md  requirements.txt
gateway/src/: main.py
gateway/src/config/: config.py
gateway/src/console/: __init__.py  console.py
gateway/src/device/: __init__.py  device.py
gateway/src/openweathermap/: __init__.py
gateway/tests/: test_console.py  test_device.py  test_openweathermap.py
lib/driver/: CMakeLists.txt
lib/driver/bme68x/: CMakeLists.txt
lib/hal/Inc/: stm32f4xx_hal_conf.h
service/: Makefile  Readme.md  Todo.md  requirements.txt
service/src/: template_config.yaml
service/src/config/: __init__.py  config.py
service/src/database/: __init__.py  database.py
service/src/openweathermap/: openweathermap.py
service/tests/: test_config.py  test_config.yaml  test_database.py  test_openweathermap.py
src/: CMakeLists.txt  commands.c  commands.h  console.c  main.c  sensor.c  sensor.h  shell.c  shell.h
src/commands/: commands.h
src/fsm/: CMakeLists.txt  fsm.c  fsm.h
src/protocol/: protocol.c
src/sensor/: sensor.c
test/: CMakeLists.txt
test/acceptance/: TestShell.robot  requirements.txt
test/mock/: mock_bme68x.c  mock_bme68x.h  mock_commands.c  mock_commands.h  mock_console.c  mock_console.h  mock_led.c  mock_protocol.h  mock_sensor.c  mock_sensor.h  mock_stm32f4x.c  mock_stm32f4x.h
test/ut/: CMakeLists.txt  test_bme680.c  test_commands.c  test_console.c  test_fsm.c  test_sensor.c  test_shell.c
testbench/: Dockerfile  Makefile  Readme.md  main.robot  requirements.txt  script.py
